# context-contrasting

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  random_tests.py
context_contrasting/: __init__.py  figures.py  utils.py
context_contrasting/circuit/: __init__.py  circuit.py  circuit_utils.py  data.py  experiment.py
context_contrasting/minimal/: __init__.py  ablations.py  config.py  experiment.py  minimal.py  minimal_pc.py  transition_types.py  utils.py  visualize.py
context_contrasting/param_explore/: README.md  analyze_basins.py  common.py  param_lr_landscape.py  param_lr_postprocess.py  param_visualizer.py  param_weight_focus.py  plotting.py  run_sampling.py  run_sbi.py
context_contrasting/param_explore/results/: 2026-05-06_transition_plane_overview.md
context_contrasting/param_explore/results/2026-04-30_parameter_regions/: backtest_details.csv  combined_candidates.csv  reference_summaries.json  region_representatives.csv  stable_region_members.csv
context_contrasting/param_explore/results/2026-04-30_parameter_regions_v2/: backtest_details.csv  combined_candidates.csv  q05_q95_boundary_check.json  reference_summaries.json  region_summary.csv  validated_core_summary.md
context_contrasting/param_explore/results/2026-04-30_weight_sweep/: best_fits.csv  candidate_scores.csv  reference_summaries.json
context_contrasting/param_explore/results/2026-05-01_lr_landscape/: boundary_pairs.csv  boundary_paths.csv  boundary_switches_annotated.csv  (+7 more)
context_contrasting/sbi/: param_explorer.py  param_lr_landscape.py  param_lr_postprocess.py
(+101 files in other folders)
