[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-contrasting"
version = "0.1.0"
description = "Circuit and minimal contextual-contrasting models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "seaborn",
    "torch>=2.5,<2.6",
    "tqdm",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["context_contrasting*"]
